tests/reference/asr-test_list1-73fd538.stderr
semantic error: Type mismatch in 'remove', the types must be compatible
 --> tests/errors/test_list1.py:6:14
  |
6 |     a.remove('error')
  |              ^^^^^^^ type mismatch (found: 'str', expected: 'i32')
